--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -37,9 +37,9 @@
   
 </div>
 -->
-<div class="item range range-balanced">
+<div class="item range range-positive">
   <i class="icon ion-ios-circle-outline"></i>
-  <input type="range" name="volume" min="0" max="100" value="20">
+  <input type="range" name="volume">
   <i class="icon ion-ios-circle-filled"></i>
 </div>
 
