--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -1,7 +1,9 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button></ion-nav-back-button>
+        <ion-nav-bar class="bar-positive">
+            <ion-nav-back-button class="button-clear">
+                <i class="ion-arrow-left-c"></i> Back
+            </ion-nav-back-button>
             <ion-nav-buttons side="left">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle=""></button>
             </ion-nav-buttons>
@@ -9,10 +11,21 @@
         <ion-nav-view name="side-menu21"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left">
-        <ion-header-bar class="bar-stable">
+        <ion-header-bar class="bar-assertive">
             <div class="title">Menu</div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header" <="" ion-content="">
+
+    
+    
+        <a class="item item-avatar" href="#/sideMenu/login">
+            <img src="img/avatar.jpg">
+            <h2>Aayush</h2>
+            <p>Macha denge</p>
+            </a>
+  
+       
+
             <ion-list>
                 <ion-list>
                     
@@ -27,7 +40,7 @@
     Add Wifi
   </a>
 
-    <a class="item item-icon-left" href="#/sideMenu/login" menu-close="">
+    <a class="item item-icon-left" href="#/sideMenu/account" menu-close="">
     <i class="icon ion-android-settings"></i>
     My account
   </a>
