--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -18,11 +18,11 @@
 
     
     
-        <a class="item item-avatar" href="#/sideMenu/login">
+        <div class="item item-avatar" href="#">
             <img src="img/avatar.jpg">
             <h2>Aayush</h2>
-            <p>Macha denge</p>
-            </a>
+            <p>8971353311</p>
+            </div>
   
        
 
@@ -31,19 +31,28 @@
                     
                     <a class="item item-icon-left" href="#/sideMenu/availableWifi" menu-close="">
     <i class="icon ion-wifi"></i>
-    Connect
-    <span class="badge badge-assertive">0</span>
+    Myfi
+    <span class="badge badge-balanced">5</span>
   </a>
 
     <a class="item item-icon-left" href="#/sideMenu/addWifi" menu-close="">
     <i class="icon ion-android-add-circle"></i>
-    Add Wifi
+    Share Wifi
   </a>
 
-    <a class="item item-icon-left" href="#/sideMenu/account" menu-close="">
-    <i class="icon ion-android-settings"></i>
-    My account
+    <a class="item item-icon-left" href="#/sideMenu/credits" menu-close="">
+    <i class="icon ion-ios-download"></i>
+    Credits Earned
+    <span class="badge badge-balanced">2400</span>
   </a>
+
+    <a class="item item-icon-left" href="#/sideMenu/usage" menu-close="">
+        <i class="icon ion-ios-upload"></i>
+        Credits Spent
+        <span class="badge badge-assertive">105</span>
+    </a>
+
+
                 </ion-list>
             </ion-list>
         </ion-content>
